--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,12 +106,50 @@ li {
 /*=================================
   Header styling starts here
 =================================*/
+.search-form, .hamburger { display: none; }
 
+header { margin-top: 21px; }
 
+.search-box { margin-top: 11px; }
 
+header a { color: #7c7c7c; }
 
+header .wrapper {
+  width: 96.5%;
+  display: flex;
+  justify-content: space-between;
+}
 
+.menu li {
+  text-transform: uppercase;
+  font-size: 11.5px; 
+}
 
+.menu li:not(:last-child):after {
+  content: '\f715';
+  padding: 5px;
+  color: #7c7c7c;
+  font-family: FontAwesome;
+  font-size: 20px;
+}
+
+.search-button {
+  display: inline-block;
+  text-indent: -9999px;
+}
+
+.search-button::before {
+  content: "\f002"; 
+  float: right;
+  text-indent: 0;
+  font-family: fontAwesome;
+  font-size: 25px;
+}
+
+.active-menu {
+  border-bottom: 2px solid red;
+  color: #000;
+}
 /*=================================
   Header styling ends here
 =================================*/  
@@ -146,6 +184,15 @@ li {
 =================================*/ 
 
 /*media query starts*/
+
+@media only screen and (min-width: 1024px) {
+  .menu a:hover { 
+    border-bottom: 2px solid red;
+    color: #000; 
+  }
+
+
+}  
 /*media query for 995px starts here*/
 @media only screen and (max-width: 995px) {
 
