--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,8 +157,34 @@ header .wrapper {
 /*=================================
   main styling starts here
 =================================*/
+/*=================================
+  banner section styling starts here
+=================================*/
 
 
+
+
+
+
+
+
+/*=================================
+  banner section styling ends here
+=================================*/
+/*=================================
+  banner section styling starts here
+=================================*/
+
+
+
+
+
+
+
+
+/*=================================
+  banner section styling ends here
+=================================*/
 
 
 
