event section styling started

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,12 @@ h2 {
   transform: rotatez(60deg);
   z-index: -1;
 }
-
+/*=================================
+  banner section styling ends here
+=================================*/
+/*=================================
+  event section styling starts here
+=================================*/
 
 
 
@@ -232,7 +237,7 @@ h2 {
 
 
 /*=================================
-  banner section styling ends here
+  event section styling ends here
 =================================*/
 /*=================================
   banner section styling starts here
@@ -248,7 +253,6 @@ h2 {
 /*=================================
   banner section styling ends here
 =================================*/
-
 
 
 
