--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,14 +228,95 @@ h2 {
 /*=================================
   event section styling starts here
 =================================*/
+.event .wrapper { width: 100%; }
 
+.event-content > li:last-child {
+  width: 51%; 
+  background-color: #5eabd7; 
+}
 
+.event-button { margin-bottom: 31px;}
 
+.event-button li:last-of-type { background-color: #f8e402; }
 
+.event-content {
+  display: flex;
+  flex-direction: row-reverse;
+}
 
+.event-description { 
+  text-align: center;
+  padding: 59px 8% 0;
+}
 
+h3 {
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 40px;
+}
 
+.event p {
+  color: #fff;
+  font-size: 13px;
+  line-height: 26px;
+  margin-bottom: 54px;
+}
 
+.event-button a {
+  text-transform: uppercase;
+  font-size: 12px;
+  padding: 18px 39px;
+  color: #000;
+}
+
+.event-button li:first-of-type {
+  margin-right: 0.3%;
+  background-color: #fff; 
+}
+
+.event-venue a{ 
+  border-right: 1px solid #ababab;
+  color: #1c4965; 
+  padding: 20px 20px; 
+  font-size: 20px;
+}
+
+.event-venue{ 
+  border-top: 1px solid #ababab;
+  display: flex;
+}
+
+.event-venue li:first-child{ 
+  width: 40%;
+  border-right: 1px solid #ababab; 
+}
+
+.event-venue span{
+  color:  #1c4965;
+  font-size: small;
+  text-transform: capitalize;
+}
+
+.location, .calender{
+  text-indent: -9999px;
+  display: inline-block;
+}
+
+.location::before{
+  content: "\f041";
+  font-family: FontAwesome;
+  text-indent: 0;
+  float: right;
+}
+
+.calender::before{
+  content: "\f073";
+  font-family: FontAwesome;
+  text-indent: 0;
+  float: right;
+}
 /*=================================
   event section styling ends here
 =================================*/
