--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,22 +106,40 @@ li {
 /*=================================
   Header styling starts here
 =================================*/
-.search-form, .hamburger { display: none; }
-
-header { margin-top: 21px; }
-
-.search-box { margin-top: 11px; }
-
 header a { color: #7c7c7c; }
+
+header { margin-top: 21px;}
 
 .menu { margin-top: 8px; }
 
 .menu a { padding-bottom: 5px; }
 
+.search-form { display: none; }
+
+.search-box { margin-top: 11px; }
+
+.open .bar-two { display: none; }
+
+.open .bar-one { 
+  -webkit-transform: rotate(45deg) translatex(7px);
+   -ms-transform: rotate(45deg) translatex(7px);
+    transform: rotate(45deg) translatex(7px); 
+}
+
+.open .bar-three { 
+  -webkit-transform: rotate(-45deg) translatex(7px);
+   -ms-transform: rotate(-45deg) translatex(7px);
+    transform: rotate(-45deg) translatex(7px); 
+}
+
 header .wrapper {
   width: 96.5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+      justify-content: space-between;
 }
 
 .menu li {
@@ -140,7 +158,6 @@ header .wrapper {
   display: inline-block;
   text-indent: -9999px;
 }
-
 .search-button::before {
   content: "\f002"; 
   float: right;
@@ -153,6 +170,39 @@ header .wrapper {
   border-bottom: 2px solid #6cb3de;
   color: #000; 
 }
+
+.hamburger {
+  width: 35px;
+  height: 100%;
+  float: right;
+  position: relative;
+  display: none;
+}
+
+.hamburger span {
+  width: 35px;
+  height: 4px;
+  margin: 5px 0;
+  display: block;
+  background: #000;
+  text-indent: -99999px;
+  -webkit-transition:  0.5s ease;
+  -o-transition:  0.5s ease;
+  transition:  0.5s ease;
+}
+
+/* nav:hover ul{
+  width: 100%;
+  display: block;
+  float: none;
+  position: absolute; 
+  top: 90%;
+  right: 0;
+  left: 0;
+  background-color: #269384;
+  text-align: center;
+} */
+
 /*=================================
   Header styling ends here
 =================================*/  
@@ -168,6 +218,8 @@ header .wrapper {
 .banner {
   padding-top: 55px;
   padding-bottom: 157px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;   
   position: relative;
 }
@@ -211,7 +263,9 @@ h2 {
   top: 17%;
   right: 58.5%;
   z-index: -1;
-  transform: rotateZ(58deg);  
+  -webkit-transform: rotateZ(58deg);
+    -ms-transform: rotate(58deg);
+      transform: rotateZ(58deg);  
 }
 
 .banner-description::before{
@@ -222,7 +276,9 @@ h2 {
   position: absolute;
   right: 18%;
   bottom: 33%; 
-  transform: rotatez(60deg);
+  -webkit-transform: rotatez(60deg); 
+    -ms-transform: rotate(60deg); 
+      transform: rotatez(60deg);
   z-index: -1;
 }
 /*=================================
@@ -233,45 +289,50 @@ h2 {
 =================================*/
 .event .wrapper { width: 100%; }
 
+.event-button { margin-bottom: 31px;}
+
+.event-button li:last-of-type { background-color: #f8e402; }
+
 .event-content > li:last-child {
   width: 51%; 
   background-color: #5eabd7; 
 }
 
-.event-button { margin-bottom: 31px;}
-
-.event-button li:last-of-type { background-color: #f8e402; }
-
 .event-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row-reverse;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+      flex-direction: row-reverse;
 }
 
 .event-description { 
-  text-align: center;
   padding: 59px 8% 0;
+  text-align: center;
 }
 
 h3 {
-  text-transform: uppercase;
+  margin-bottom: 40px;
   color: #fff;
   font-weight: bold;
   font-size: 30px;
-  margin-bottom: 40px;
+  text-transform: uppercase;
 }
 
 .event p {
+  margin-bottom: 54px;
   color: #fff;
   font-size: 13px;
   line-height: 26px;
-  margin-bottom: 54px;
 }
 
 .event-button a {
-  text-transform: uppercase;
-  font-size: 12px;
   padding: 18px 39px;
   color: #000;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 .event-button li:first-of-type {
@@ -279,42 +340,44 @@ h3 {
   background-color: #fff; 
 }
 
-.event-venue a{ 
+.event-venue a { 
+  padding: 20px 20px; 
   border-right: 1px solid #ababab;
   color: #1c4965; 
-  padding: 20px 20px; 
   font-size: 20px;
 }
 
 .event-venue{ 
   border-top: 1px solid #ababab;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
-.event-venue li:first-child{ 
+.event-venue li:first-child { 
   width: 40%;
   border-right: 1px solid #ababab; 
 }
 
-.event-venue span{
+.event-venue span {
   color:  #1c4965;
   font-size: small;
   text-transform: capitalize;
 }
 
-.location, .calender{
-  text-indent: -9999px;
+.location, .calender {
   display: inline-block;
+  text-indent: -9999px; 
 }
 
-.location::before{
+.location::before {
   content: "\f041";
   font-family: FontAwesome;
   text-indent: 0;
   float: right;
 }
 
-.calender::before{
+.calender::before {
   content: "\f073";
   font-family: FontAwesome;
   text-indent: 0;
@@ -416,6 +479,16 @@ h4 {
   articles section styling ends here
 =================================*/
 /*=================================
+  infographic section styling startss here
+=================================*/
+
+
+
+
+/*=================================
+  infographic section styling ends here
+=================================*/
+/*=================================
   newsletter section styling starts here
 =================================*/ 
 .newsletter .wrapper { width: 41.5%; }
@@ -428,7 +501,11 @@ h4 {
 }
 
 .newsletter form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -456,12 +533,12 @@ h4 {
 .send::before {
   content: "\f1d8";
   padding: 16px 21px;
-  text-indent: 0;
   float: right;
   background-color: #fff;
   color: #7c7c7c;
   font-family: FontAwesome;
   font-size: 25px;
+  text-indent: 0;
 }
 /*=================================
   newsletter section styling ends here
@@ -479,7 +556,11 @@ footer a { color: #7c7c7c; }
 
 footer .wrapper { 
   width: 96%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -505,8 +586,12 @@ h6 {
 }
 
 .right-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+      justify-content: space-between;
 }
 
 .social-links a{
@@ -554,14 +639,7 @@ h6 {
 /*media query starts*/
 
 @media only screen and (min-width: 1024px) {
-  .menu a:hover { 
-    border-bottom: 2px solid #6cb3de;
-    color: #000; 
-  }
-
   h6 a:hover { color: #fff; }
-
-  .contact-button:hover { background-color: #64635a;}
 
   .facebook:hover { color: #3b579c;}
 
@@ -571,6 +649,20 @@ h6 {
 
   .linkedin:hover { color: #347bb6;}
 
+  .menu a:hover { 
+    border-bottom: 2px solid #6cb3de;
+    color: #000; 
+  }
+
+  .event-button li:hover { 
+    -webkit-box-shadow: inset 0 0 10px #000000; 
+      box-shadow: inset 0 0 10px #000000;
+  }
+
+  .contact-button:hover { 
+    -webkit-box-shadow: inset 0 0 10px #000000; 
+      box-shadow: inset 0 0 10px #000000;
+  }
 }  
 /*media query for 995px starts here*/
 @media only screen and (max-width: 995px) {
